[tool.poetry]
name = "radium_test1"
version = "0.1.0"
description = ""
authors = ["alex <duplex530785@yandex.ru>"]

[tool.nitpick]
style = [
    "nitpickconf/darglint.toml",
    "flake8.toml",
    "isort.toml"
]

[tool.poetry.dependencies]
python = "^3.9"
pytest-asyncio = "^0.17.2"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"
flake8-pytest-style = "^1.3.0"
flake8-SQL = "^0.4.1"
flake8-annotations = "^2.4.1"
flake8-logging-format = "^0.6.0"
flake8-coding = "^1.3.2"
flake8-spellcheck = "^0.24.0"
autopep8 = "^1.5.4"
isort = "^5.7.0"
pytest = "^6.2.3"
pytest-cov = "^3.0.0"
pytest-xdist = {extras = ["psutil"], version = "^2.1.0"}
pytest-sugar = "^0.9.4"
Faker = "^9.5.0"
pytest-snapshot = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
